Fix crash when opening hosted app windows on Chrome OS with material refresh enabled

This CL adds a null check to BrowserActionsContainer::Layout() and updates
browser_non_client_frame_view_ash_browsertest.cc to cover
--top-chrome-md=material-refresh.

The existing HostedAppNonClientFrameViewAshTest.BrowserActions test catches this
crash with the material-refresh flag enabled.

Bug: 838581
Change-Id: I263b3cd3551a3171f5acc010c1c99f0daef47998
Reviewed-on: https://chromium-review.googlesource.com/1039209
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555625}
Former-commit-id: 9cf9c0c56edce812ea5cf934aff4bbc7d571c9b6